# minimal-dev-setup

./: CMakeLists.txt  README.md  atmel_samv71_xplained_ultra.cfg  conan-profile-samv71  conanfile.py
cmake/: samv71-toolchain.cmake
conan/config/: README.md
conan/config/profiles/: baremetal-samv71-armv7
conan/config/profiles/cmake-settings/: samv71q21b.cmake
conan/recipes/cmsis/: conandata.yml  conanfile.py
conan/recipes/freertos/: conandata.yml  conanfile.py
conan/recipes/harmony/: conandata.yml  conanfile.py
conan/recipes/harmony-csp/: conanfile.py
conan/recipes/harmony-mhc/: conandata.yml  conanfile.py
conan/recipes/harmony/cmake/: GraphSettings.yml.in  MHCHelper.cmake  project.yml.in  settings.yml.in
conan/recipes/samv71-dfp/: conandata.yml  conanfile.py
examples/blinky/: CMakeLists.txt  README.md  conanfile.py
examples/blinky/mcu-config/: core.yml
examples/blinky/src/: main.c
examples/usart-blocking/: CMakeLists.txt  atmel_samv71_xplained_ultra.cfg  conanfile.py
examples/usart-blocking/mcu-config/: core.yml  efc.yml  usart1.yml
examples/usart-blocking/src/: main.c
src/: main.c
